--- a/index.html
+++ b/index.html
@@ -1,12 +1,127 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
-  </head>
-  <body>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
+<head>
+  <meta charset="utf-8">
+  <title>HTML Academy: Седона</title>
+</head>
 
-  </body>
+<body>
+  <header>
+    <nav>
+      <ul>
+        <li><a href="#">Информация</a></li>
+        <li><a href="#">Фото и видео</a></li>
+        <li><a><img src="https://via.placeholder.com/138x71" alt="Логотип Седона"></a></li>
+        <li><a href="#">Карта штата</a></li>
+        <li><a href="#">Гостиницы</a></li>
+      </ul>
+      <a>
+        <img src="https://via.placeholder.com/458x352" alt="Логотип Седона">
+      </a>
+    </nav>
+  </header>
+
+  <main>
+    <h1>Почему Седона?</h1>
+
+    <section>
+      <h3>Седона — небольшой городок в Аризоне,<br>
+         заслуживающий большего! </h3>
+      <p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
+    </section>
+
+    <section>
+      <h3>Настоящий <br>
+        городок</h3>
+      <p>— №1 —</p>
+       <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+      <img src="https://via.placeholder.com/800x256" alt="Городок">
+    </section>
+
+    <section>
+      <ul>
+        <li>
+          <img src="https://via.placeholder.com/75x72" alt="Жилье">
+          <h2>Жильё</h2>
+          <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+        </li>
+        <li>
+          <img src="https://via.placeholder.com/75x70" alt="Жилье">
+          <h2>Еда</h2>
+          <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+        </li>
+        <li>
+          <img src="https://via.placeholder.com/64x77" alt="Жилье">
+          <h2>Сувениры</h2>
+          <p>Не только китайского, но и местного производства!</p>
+        </li>
+      </ul>
+    </section>
+
+    <section>
+      <img src="https://via.placeholder.com/800x256" alt="Мост Дьявола">
+      <h3>Там есть<br>
+         Мост дьявола  </h3>
+      <p>— №2 —</p>
+      <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+    </section>
+
+    <section>
+      <h2>Преимущества</h2>
+      <ul>
+        <li>
+          <h2>Небольшая<br>
+             площадь</h2>
+          <p>— №3 —</p>
+          <p>Все достопримечательности  находятся очень близко</p>
+        </li>
+        <li>
+          <h2>Красивая <br>
+            дорога</h2>
+          <p>— №4 —</p>
+          <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+        </li>
+        <li>
+          <h2>Мало <br>
+            туристов</h2>
+          <p>— №5 —</p>
+          <p>Большинство едет в гранд каньон и толпится там</p>
+        </li>
+      </ul>
+    </section>
+
+    <section>
+      <h1>Заинтересовались</h1>
+      <p>Укажите предполагаемые даты поездки,  и мы покажем вам лучшие предложения
+        гостиниц в седоне  </p>
+      <button type="button">ПОИСК ГОСТИНИЦЫ В седоне</button>
+      <!--Здесь будет форма-->
+    </section>
+
+    <section>
+      <a href="https://via.placeholder.com/1199x561"></a>
+    </section>
+  </main>
+
+  <footer>
+    <p>
+      #visitSEDONA<br>
+      ТЕЛ: +7(495) 666-01-66
+    </p>
+    <div>
+      <p>Давайте дружить!</p>
+      <ul>
+        <li><a href="#">Твиттер</a></li>
+        <li><a href="#">Фейсбук</a></li>
+        <li><a href="#">Инстаграм</a></li>
+      </ul>
+    </div>
+    <p>
+      Website by
+      <a href="https://htmlacademy.ru"><img src="https://via.placeholder.com/104x26"></a>
+    </p>
+  </footer>
+</body>
+
 </html>
