--- a/html/index.html
+++ b/html/index.html
@@ -10,36 +10,41 @@
   <header>
     <nav>
       <ul>
-        <li><a href="#">Информация</a></li>
+        <li>Информация</li>
         <li><a href="#">Фото и видео</a></li>
-        <li><a><img src="https://via.placeholder.com/138x71" alt="Логотип Седона"></a></li>
+      </ul>
+      <a><img src="https://via.placeholder.com/138x71" alt="Логотип Седона"></a>
+      <ul>
         <li><a href="#">Карта штата</a></li>
         <li><a href="#">Гостиницы</a></li>
       </ul>
       <a>
-        <img src="https://via.placeholder.com/458x352" alt="Логотип Седона">
+        <img src="https://via.placeholder.com/458x352" alt="Интро">
       </a>
     </nav>
   </header>
 
   <main>
-    <h1>Почему Седона?</h1>
-
+    <h1 class="visually-hidden">Преимущества выбора курортного городка Седон. </h1>
     <section>
-      <h3>Седона — небольшой городок в Аризоне,<br>
-         заслуживающий большего! </h3>
+
+      <h2>Седона — небольшой городок в Аризоне,<br>
+         заслуживающий большего! </h2>
       <p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
     </section>
 
     <section>
-      <h3>Настоящий <br>
-        городок</h3>
+      <h2 class="visually-hidden">Тихий городок Седона</h2>
+      <h2>Настоящий <br>
+        городок</h2>
       <p>— №1 —</p>
        <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
       <img src="https://via.placeholder.com/800x256" alt="Городок">
     </section>
 
     <section>
+      <h2 class="visually-hidden">Седона - это место, где не только вкусная еда и отличные мотел,
+        но и сувениры местного производства</h2>
       <ul>
         <li>
           <img src="https://via.placeholder.com/75x72" alt="Жилье">
@@ -60,15 +65,17 @@
     </section>
 
     <section>
+      <h2 class="visually-hidden">Мост Дьявола - одна из достопримечательностей Седоны</h2>
       <img src="https://via.placeholder.com/800x256" alt="Мост Дьявола">
-      <h3>Там есть<br>
-         Мост дьявола  </h3>
+      <h2>Там есть<br>
+         Мост дьявола  </h2>
       <p>— №2 —</p>
       <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
     </section>
 
     <section>
-      <h2>Преимущества</h2>
+      <h2 class="visually-hidden">Седона- это маленький городок, где все достопримичательности
+        очень близко, мало туристов и красивая местность</h2>
       <ul>
         <li>
           <h2>Небольшая<br>
@@ -80,27 +87,28 @@
           <h2>Красивая <br>
             дорога</h2>
           <p>— №4 —</p>
-          <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+          <p>Ехать в Седону из Лас-Вегаса совсем  не скучно!</p>
         </li>
         <li>
           <h2>Мало <br>
             туристов</h2>
           <p>— №5 —</p>
-          <p>Большинство едет в гранд каньон и толпится там</p>
+          <p>Большинство едет в гранд каньон  и толпится там</p>
         </li>
       </ul>
     </section>
 
     <section>
-      <h1>Заинтересовались</h1>
+      <h2 class="visually-hidden">Поиск гостинцы в Седоне</h2>
+      <h2>Заинтересовались</h2>
       <p>Укажите предполагаемые даты поездки,  и мы покажем вам лучшие предложения
         гостиниц в седоне  </p>
-      <button type="button">ПОИСК ГОСТИНИЦЫ В седоне</button>
+      <button type="button">ПОИСК ГОСТИНИЦЫ В Седоне</button>
       <!--Здесь будет форма-->
     </section>
 
     <section>
-      <a href="https://via.placeholder.com/1199x561"></a>
+      <a href="#"><img src="https://via.placeholder.com/1199x561"></a>
     </section>
   </main>
 
@@ -110,7 +118,7 @@
       ТЕЛ: +7(495) 666-01-66
     </p>
     <div>
-      <p>Давайте дружить!</p>
+      <h2 class="visually-hidden">Седона в соцсетях</h2>
       <ul>
         <li><a href="#">Твиттер</a></li>
         <li><a href="#">Фейсбук</a></li>
