--- a/html/catalog.html
+++ b/html/catalog.html
@@ -12,17 +12,17 @@
       <ul>
         <li><a href="#">Информация</a></li>
         <li><a href="#">Фото и видео</a></li>
-        <a href="index.html"><img src="https://via.placeholder.com/138x71" alt="Логотип Седона"></a>
         <li><a href="#">Карта штата</a></li>
         <li>Гостиницы</li>
       </ul>
     </nav>
+    <a href="index.html"><img src="https://via.placeholder.com/138x71" alt="Логотип Седона"></a>
   </header>
 
   <main>
     <h1 class="visually-hidden">Места проживания в городе Седона</h1>"
     <section>
-      <h2 class="visually-hidden">Краткая информация по местам проживания</h2>
+      <h2 class="visually-hidden">Список мест проживания</h2>
       <ul>
         <li>
           <a><img src="https://via.placeholder.com/138x71" alt="Amara Resort & Spa"></a>
@@ -34,8 +34,6 @@
           <a href="#">Забронировать</a>
           <p>Рейтинг: 8,5</p>
         </li>
-      </ul>
-      <ul>
         <li>
           <a><img src="https://via.placeholder.com/138x71" alt="Desert Quail Inn"></a>
           <h3>Desert Quail Inn</h3>
@@ -46,8 +44,6 @@
           <a href="#">Забронировать</a>
           <p>Рейтинг: 8,9</p>
         </li>
-      </ul>
-      <ul>
         <li>
           <a><img src="https://via.placeholder.com/138x71" alt="Villas at Poco Diablo"></a>
           <h3>Villas at Poco Diablo</h3>
@@ -64,8 +60,8 @@
 
   <footer>
     <p>
-      #visitSEDONA<br>
-      ТЕЛ: +7(495) 666-01-66
+      <a href="#">#visitSEDONA</a>
+      <p>ТЕЛ: +7(495) 666-01-66</p>
     </p>
     <div>
       <h2 class="visually-hidden">Седона в соцсетях</h2>
