--- a/html/index.html
+++ b/html/index.html
@@ -12,87 +12,67 @@
       <ul>
         <li>Информация</li>
         <li><a href="#">Фото и видео</a></li>
-      </ul>
-      <a><img src="https://via.placeholder.com/138x71" alt="Логотип Седона"></a>
-      <ul>
         <li><a href="#">Карта штата</a></li>
         <li><a href="#">Гостиницы</a></li>
       </ul>
-      <a>
-        <img src="https://via.placeholder.com/458x352" alt="Интро">
-      </a>
     </nav>
+    <a><img src="https://via.placeholder.com/138x71" alt="Логотип Седона"></a>
   </header>
 
   <main>
-    <h1 class="visually-hidden">Преимущества выбора курортного городка Седон. </h1>
     <section>
-
-      <h2>Седона — небольшой городок в Аризоне,<br>
-         заслуживающий большего! </h2>
+      <h1 class="visually-hidden">Седона - город в Аризоне</h1>
+      <a>
+        <img src="https://via.placeholder.com/458x352" alt="Интро">
+      </a>
+      <p>Седона — небольшой городок в Аризоне,<br>
+         заслуживающий большего! </p>
       <p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
     </section>
 
     <section>
-      <h2 class="visually-hidden">Тихий городок Седона</h2>
-      <h2>Настоящий <br>
-        городок</h2>
-      <p>— №1 —</p>
-       <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-      <img src="https://via.placeholder.com/800x256" alt="Городок">
-    </section>
-
-    <section>
-      <h2 class="visually-hidden">Седона - это место, где не только вкусная еда и отличные мотел,
-        но и сувениры местного производства</h2>
+      <h2 class="visually-hidden">Преимущества Седоны</h2>
       <ul>
         <li>
-          <img src="https://via.placeholder.com/75x72" alt="Жилье">
-          <h2>Жильё</h2>
+          <h3>Настоящий  городок</h3>
+          <span>— №1 —</span>
+           <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+          <img src="https://via.placeholder.com/800x256" alt="Городок">
+        </li>
+        <li>
+          <!-- <img src="" alt="Жилье"> -->
+          <h3>Жильё</h3>
           <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
         </li>
         <li>
-          <img src="https://via.placeholder.com/75x70" alt="Жилье">
-          <h2>Еда</h2>
+          <!-- <img src="" alt="Еда"> -->
+          <h3>Еда</h3>
           <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
         </li>
         <li>
-          <img src="https://via.placeholder.com/64x77" alt="Жилье">
-          <h2>Сувениры</h2>
+          <!-- <img src="" alt="Сувениры"> -->
+          <h3>Сувениры</h3>
           <p>Не только китайского, но и местного производства!</p>
         </li>
-      </ul>
-    </section>
-
-    <section>
-      <h2 class="visually-hidden">Мост Дьявола - одна из достопримечательностей Седоны</h2>
-      <img src="https://via.placeholder.com/800x256" alt="Мост Дьявола">
-      <h2>Там есть<br>
-         Мост дьявола  </h2>
-      <p>— №2 —</p>
-      <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
-    </section>
-
-    <section>
-      <h2 class="visually-hidden">Седона- это маленький городок, где все достопримичательности
-        очень близко, мало туристов и красивая местность</h2>
-      <ul>
         <li>
-          <h2>Небольшая<br>
-             площадь</h2>
-          <p>— №3 —</p>
+          <img src="https://via.placeholder.com/800x256" alt="Мост Дьявола">
+          <h3>Там есть  Мост дьявола  </h3>
+          <span>— №2 —</span>
+          <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+        </li>
+        <li>
+          <h3>Небольшая площадь</h3>
+          <span>— №3 —</span>
           <p>Все достопримечательности  находятся очень близко</p>
         </li>
         <li>
-          <h2>Красивая <br>
-            дорога</h2>
-          <p>— №4 —</p>
+          <h3>Красивая  дорога</h3>
+          <span>— №4 —</span>
           <p>Ехать в Седону из Лас-Вегаса совсем  не скучно!</p>
         </li>
         <li>
-          <h2>Мало <br>
-            туристов</h2>
-          <p>— №5 —</p>
+          <h3>Мало  туристов</h3>
+          <span>— №5 —</span>
           <p>Большинство едет в гранд каньон  и толпится там</p>
         </li>
       </ul>
@@ -100,21 +80,22 @@
 
     <section>
       <h2 class="visually-hidden">Поиск гостинцы в Седоне</h2>
-      <h2>Заинтересовались</h2>
-      <p>Укажите предполагаемые даты поездки,  и мы покажем вам лучшие предложения
-        гостиниц в седоне  </p>
-      <button type="button">ПОИСК ГОСТИНИЦЫ В Седоне</button>
+      <strong>Заинтересовались</strong>
+      <p>Укажите предполагаемые даты поездки,<br>
+         и мы покажем вам лучшие предложения гостиниц в Cедоне  </p>
+      <button type="button">Поиск гостиницы в Седоне</button>
       <!--Здесь будет форма-->
     </section>
 
     <section>
+      <h2 class="visually-hidden">Карта города Седона</h2>
       <a href="#"><img src="https://via.placeholder.com/1199x561"></a>
     </section>
   </main>
 
   <footer>
     <p>
-      #visitSEDONA<br>
+      <a href="#">#visitSEDONA</a><br>
       ТЕЛ: +7(495) 666-01-66
     </p>
     <div>
