--- a/html/index.html
+++ b/html/index.html
@@ -38,21 +38,23 @@
           <span>— №1 —</span>
            <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
           <img src="https://via.placeholder.com/800x256" alt="Городок">
-        </li>
-        <li>
-          <!-- <img src="" alt="Жилье"> -->
-          <h3>Жильё</h3>
-          <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
-        </li>
-        <li>
-          <!-- <img src="" alt="Еда"> -->
-          <h3>Еда</h3>
-          <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
-        </li>
-        <li>
-          <!-- <img src="" alt="Сувениры"> -->
-          <h3>Сувениры</h3>
-          <p>Не только китайского, но и местного производства!</p>
+          <ul>
+            <li>
+              <!-- <img src="" alt="Жилье"> -->
+              <h4>Жильё</h4>
+              <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+            </li>
+            <li>
+              <!-- <img src="" alt="Еда"> -->
+              <h4>Еда</h4>
+              <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+            </li>
+            <li>
+              <!-- <img src="" alt="Сувениры"> -->
+              <h4>Сувениры</h4>
+              <p>Не только китайского, но и местного производства!</p>
+            </li>
+          </ul>
         </li>
         <li>
           <img src="https://via.placeholder.com/800x256" alt="Мост Дьявола">
@@ -95,8 +97,8 @@
 
   <footer>
     <p>
-      <a href="#">#visitSEDONA</a><br>
-      ТЕЛ: +7(495) 666-01-66
+      <a href="#">#visitSEDONA</a>
+      <p>ТЕЛ: +7(495) 666-01-66</p>
     </p>
     <div>
       <h2 class="visually-hidden">Седона в соцсетях</h2>
