--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
         <li><a href="#">Гостиницы</a></li>
       </ul>
     </nav>
-    <a><img src="https://via.placeholder.com/138x71" alt="Логотип Седона"></a>
+    <a><img src="img/logo-sedona.svg" width="138" height="71" alt="Логотип Седона"></a>
   </header>
 
   <main>
     <section>
       <h1 class="visually-hidden">Седона - город в Аризоне</h1>
       <a>
-        <img src="https://via.placeholder.com/458x352" alt="Интро">
+        <img src="img/intro-welcome.svg" width="458" height="352" alt="Интро">
       </a>
       <p>Седона — небольшой городок в Аризоне,<br>
          заслуживающий большего! </p>
@@ -37,7 +37,7 @@
           <h3>Настоящий  городок</h3>
           <span>— №1 —</span>
            <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-          <img src="https://via.placeholder.com/800x256" alt="Городок">
+          <img src="img/town.jpg" width="800" height="256" alt="Городок">
           <ul>
             <li>
               <!-- <img src="" alt="Жилье"> -->
@@ -57,7 +57,7 @@
           </ul>
         </li>
         <li>
-          <img src="https://via.placeholder.com/800x256" alt="Мост Дьявола">
+          <img src="img/bridge.jpg" width="800" height="256" alt="Мост Дьявола">
           <h3>Там есть  Мост дьявола  </h3>
           <span>— №2 —</span>
           <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
@@ -103,14 +103,14 @@
     <div>
       <h2 class="visually-hidden">Седона в соцсетях</h2>
       <ul>
-        <li><a href="#">Твиттер</a></li>
-        <li><a href="#">Фейсбук</a></li>
-        <li><a href="#">Инстаграм</a></li>
+        <li><a href="#"><img src="img/twitter.svg" width="17" height="17" alt="Твиттер"></a></li>
+        <li><a href="#"><img src="img/fb-icon.svg" width="12" height="22" alt="Фейсбук"></a></li>
+        <li><a href="#"><img src="img/youtube.svg" width="20" height="16" alt="Ютуб"></a></li>
       </ul>
     </div>
     <p>
       Website by
-      <a href="https://htmlacademy.ru"><img src="https://via.placeholder.com/104x26"></a>
+      <a href="https://htmlacademy.ru"><img src="img/logo-htmlacademy.svg" width="104" height="26" alt="Логотип HTML Academy"></a>
     </p>
   </footer>
 </body>
