--- a/catalog.html
+++ b/catalog.html
@@ -16,18 +16,21 @@
         <li>Гостиницы</li>
       </ul>
     </nav>
-    <a href="index.html"><img src="https://via.placeholder.com/138x71" alt="Логотип Седона"></a>
+    <a href="index.html"><img src="img/logo-sedona.svg" width="138" height="71" alt="Логотип Седона"></a>
   </header>
 
   <main>
-    <h1 class="visually-hidden">Места проживания в городе Седона</h1>"
+    <h1 class="visually-hidden">Места проживания в городе Седона</h1>
     <section>
       <h2 class="visually-hidden">Список мест проживания</h2>
       <ul>
         <li>
-          <a><img src="https://via.placeholder.com/138x71" alt="Amara Resort & Spa"></a>
+          <a><img src="img/hotel-1.jpg" width="135" height="90" alt="Amara Resort & Spa"></a>
           <h3>Amara Resort & Spa</h3>
-          <img src="https://via.placeholder.com/19x17">
+          <img src="img/star.svg" width="19" height="17" alt="4 звезды из 5">
+          <img src="img/star.svg" width="19" height="17" alt="">
+          <img src="img/star.svg" width="19" height="17" alt="">
+          <img src="img/star.svg" width="19" height="17" alt="">
           <p>Гостиница</p>
           <p>От 4000 Р.</p>
           <a href="#">Подробнее</a>
@@ -35,9 +38,11 @@
           <p>Рейтинг: 8,5</p>
         </li>
         <li>
-          <a><img src="https://via.placeholder.com/138x71" alt="Desert Quail Inn"></a>
+          <a><img src="img/hotel-2.png" width="135" height="90" alt="Desert Quail Inn"></a>
           <h3>Desert Quail Inn</h3>
-          <img src="https://via.placeholder.com/19x17">
+          <img src="img/star.svg" width="19" height="17" alt="3 звезды из 5">
+          <img src="img/star.svg" width="19" height="17" alt="">
+          <img src="img/star.svg" width="19" height="17" alt="">
           <p>Мотель</p>
           <p>От 3000 Р.</p>
           <a href="#">Подробнее</a>
@@ -45,9 +50,10 @@
           <p>Рейтинг: 8,9</p>
         </li>
         <li>
-          <a><img src="https://via.placeholder.com/138x71" alt="Villas at Poco Diablo"></a>
+          <a><img src="img/hotel-3.jpg" width="135" height="90" alt="Villas at Poco Diablo"></a>
           <h3>Villas at Poco Diablo</h3>
-          <img src="https://via.placeholder.com/19x17">
+          <img src="img/star.svg" width="19" height="17" alt="2 звезды из 5">
+          <img src="img/star.svg" width="19" height="17" alt="">
           <p>Апартаменты</p>
           <p>От 2000 Р.</p>
           <a href="#">Подробнее</a>
@@ -66,14 +72,14 @@
     <div>
       <h2 class="visually-hidden">Седона в соцсетях</h2>
       <ul>
-        <li><a href="#">Твиттер</a></li>
-        <li><a href="#">Фейсбук</a></li>
-        <li><a href="#">Инстаграм</a></li>
+        <li><a href="#"><img src="img/twitter.svg" width="17" height="17" alt="Твиттер"></a></li>
+        <li><a href="#"><img src="img/fb-icon.svg" width="12" height="22" alt="Фейсбук"></a></li>
+        <li><a href="#"><img src="img/youtube.svg" width="20" height="16" alt="Ютуб"></a></li>
       </ul>
     </div>
     <p>
       Website by
-      <a href="https://htmlacademy.ru"><img src="https://via.placeholder.com/104x26"></a>
+      <a href="https://htmlacademy.ru"><img src="img/logo-htmlacademy.svg" width="104" height="26" alt="Логотип HTML Academy"></a>
     </p>
   </footer>
 </body>
