удалили изображения звезд (рейтинг)

--- a/catalog.html
+++ b/catalog.html
@@ -27,10 +27,6 @@
         <li>
           <a><img src="img/hotel-1.jpg" width="135" height="90" alt="Amara Resort & Spa"></a>
           <h3>Amara Resort & Spa</h3>
-          <img src="img/star.svg" width="19" height="17" alt="4 звезды из 5">
-          <img src="img/star.svg" width="19" height="17" alt="">
-          <img src="img/star.svg" width="19" height="17" alt="">
-          <img src="img/star.svg" width="19" height="17" alt="">
           <p>Гостиница</p>
           <p>От 4000 Р.</p>
           <a href="#">Подробнее</a>
@@ -40,9 +36,6 @@
         <li>
           <a><img src="img/hotel-2.png" width="135" height="90" alt="Desert Quail Inn"></a>
           <h3>Desert Quail Inn</h3>
-          <img src="img/star.svg" width="19" height="17" alt="3 звезды из 5">
-          <img src="img/star.svg" width="19" height="17" alt="">
-          <img src="img/star.svg" width="19" height="17" alt="">
           <p>Мотель</p>
           <p>От 3000 Р.</p>
           <a href="#">Подробнее</a>
@@ -52,8 +45,6 @@
         <li>
           <a><img src="img/hotel-3.jpg" width="135" height="90" alt="Villas at Poco Diablo"></a>
           <h3>Villas at Poco Diablo</h3>
-          <img src="img/star.svg" width="19" height="17" alt="2 звезды из 5">
-          <img src="img/star.svg" width="19" height="17" alt="">
           <p>Апартаменты</p>
           <p>От 2000 Р.</p>
           <a href="#">Подробнее</a>
@@ -79,7 +70,8 @@
     </div>
     <p>
       Website by
-      <a href="https://htmlacademy.ru"><img src="img/logo-htmlacademy.svg" width="104" height="26" alt="Логотип HTML Academy"></a>
+      <a href="https://htmlacademy.ru"><img src="img/logo-htmlacademy.svg" width="104" height="26"
+          alt="Логотип HTML Academy"></a>
     </p>
   </footer>
 </body>
