добавила результаты по фильтру(сортировка)

--- a/catalog.html
+++ b/catalog.html
@@ -20,6 +20,16 @@
   </header>
 
   <main>
+    <section>
+      <h2 class="visually-hidden">Результаты поиска</h2>
+      <span>Найдено: 3</span>
+      <p>Сортировка</p>
+      <ul>
+        <li><a href="">По цене</a></li>
+        <li><a href="">По типу</a></li>
+        <li><a href="">По рейтингу</a></li>
+      </ul>
+    </section>
     <h1 class="visually-hidden">Места проживания в городе Седона</h1>
     <section>
       <h2 class="visually-hidden">Список мест проживания</h2>
