--- a/index.html
+++ b/index.html
@@ -102,15 +102,15 @@
     </p>
     <div>
       <h2 class="visually-hidden">Седона в соцсетях</h2>
-      <ul>
+      <!-- <ul>
         <li><a href="#"><img src="img/twitter.svg" width="17" height="17" alt="Твиттер"></a></li>
         <li><a href="#"><img src="img/fb-icon.svg" width="12" height="22" alt="Фейсбук"></a></li>
         <li><a href="#"><img src="img/youtube.svg" width="20" height="16" alt="Ютуб"></a></li>
-      </ul>
+      </ul> -->
     </div>
     <p>
       Website by
-      <a href="https://htmlacademy.ru"><img src="img/logo-htmlacademy.svg" width="104" height="26" alt="Логотип HTML Academy"></a>
+      <!-- <a href="https://htmlacademy.ru"><img src="img/logo-htmlacademy.svg" width="104" height="26" alt="Логотип HTML Academy"></a> -->
     </p>
   </footer>
 </body>
