--- a/catalog.html
+++ b/catalog.html
@@ -22,6 +22,54 @@
   <main>
     <h1 class="visually-hidden">Места проживания в городе Седона</h1>
     <section>
+      <h2 class="visually-hidden">Фильтр мест проживания</h2>
+      <form action="https://echo.htmlacademy.ru" method="GET" oninput="priceoutput.value=price.value">
+        <fieldset>
+          <legend>Инфраструктура:</legend>
+          <ul>
+            <li>
+              <input type="checkbox" name="pool" id="filter-pool" checked>
+              <label for="filter-pool">Бассейн</label>
+            </li>
+            <li>
+              <input type="checkbox" name="parking" id="filter-parking">
+              <label for="filter-parking">Парковка</label>
+            </li>
+            <li>
+              <input type="checkbox" name="wi-fi" id="filter-wi-fi">
+              <label for="filter-wi-fi">WI-FI</label>
+            </li>
+          </ul>
+        </fieldset>
+        <fieldset>
+          <legend>Тип жилья</legend>
+          <ul>
+            <li>
+              <input type="checkbox" name="hotel" id="filter-hotel" checked>
+              <label for="filter-pool">Гостиница</label>
+            </li>
+            <li>
+              <input type="checkbox" name="motel" id="filter-motel" checked>
+              <label for="filter-motel">Мотель</label>
+            </li>
+            <li>
+              <input type="checkbox" name="apartments" id="filter-apartments" checked>
+              <label for="filter-apartments">Апартаменты </label>
+            </li>
+          </ul>
+        </fieldset>
+        <fieldset>
+          <legend>Стоимость в сутки (р):</legend>
+          <label>от <input type="number" min="0" max="5000" value="0"></label>
+          <label>до <output name="priceoutput" for="filter-price"></output></label>
+          <p>
+            <input type="range" name="price" id="filter-price" min="0" max="5000" step="500">
+          </p>
+        </fieldset>
+        <button type="button">Показать</button>
+      </form>
+    </section>
+    <section>
       <h2 class="visually-hidden">Результаты поиска</h2>
       <span>Найдено: 3</span>
       <p>Сортировка</p>
