--- a/catalog.html
+++ b/catalog.html
@@ -66,7 +66,7 @@
             <input type="range" name="price" id="filter-price" min="0" max="5000" step="500">
           </p>
         </fieldset>
-        <button type="button">Показать</button>
+        <button type="submit">Показать</button>
       </form>
     </section>
     <section>
