изменила альтернативный текст

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <h3>Настоящий  городок</h3>
           <span>— №1 —</span>
            <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-          <img src="img/town.jpg" width="800" height="256" alt="Городок">
+          <img src="img/town.jpg" width="800" height="256" alt="Седона с красивым видом на горы и с небольшими улицами">
           <ul>
             <li>
               <!-- <img src="" alt="Жилье"> -->
@@ -57,7 +57,7 @@
           </ul>
         </li>
         <li>
-          <img src="img/bridge.jpg" width="800" height="256" alt="Мост Дьявола">
+          <img src="img/bridge.jpg" width="800" height="256" alt="Мост Дьявола, созданный самой природой">
           <h3>Там есть  Мост дьявола  </h3>
           <span>— №2 —</span>
           <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
