--- a/catalog.html
+++ b/catalog.html
@@ -23,7 +23,7 @@
     <h1 class="visually-hidden">Места проживания в городе Седона</h1>
     <section>
       <h2 class="visually-hidden">Фильтр мест проживания</h2>
-      <form action="https://echo.htmlacademy.ru" method="GET" oninput="priceoutput.value=price.value">
+      <form action="https://echo.htmlacademy.ru" method="GET">
         <fieldset>
           <legend>Инфраструктура:</legend>
           <ul>
@@ -60,11 +60,13 @@
         </fieldset>
         <fieldset>
           <legend>Стоимость в сутки (р):</legend>
-          <label>от <input type="number" min="0" max="5000" value="0"></label>
-          <label>до <output name="priceoutput" for="filter-price"></output></label>
-          <p>
-            <input type="range" name="price" id="filter-price" min="0" max="5000" step="500">
-          </p>
+          <div>
+            <label>от <input type="text" name="price-per-day" id="start-price" value="0"></label>
+            <label>до <input type="text" name="price-per-day" id="end-price" value="3000"></label>
+          </div>
+          <div>
+            <!-- здесь будет ползунок-->
+          </div>
         </fieldset>
         <button type="submit">Показать</button>
       </form>
@@ -79,15 +81,27 @@
         <li><a href="">По рейтингу</a></li>
       </ul>
       <ul>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
+        <li>
+          <a href="" aria-label="Сортировать результат по возрастанию">
+            <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10">
+              <path fill="#231F20" d="M5.5 0L0 10h11z"/>
+            </svg>
+          </a>
+        </li>
+        <li>
+          <a href="" aria-label="Сортировать результат по убыванию">
+            <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10">
+              <path fill="#231F20" d="M5.5 10L0 0h11"/>
+            </svg>
+          </a>
+        </li>
       </ul>
     </section>
     <section>
       <h2 class="visually-hidden">Список мест проживания</h2>
       <ul>
         <li>
-          <a><img src="img/hotel-1.jpg" width="135" height="90" alt="Amara Resort & Spa"></a>
+          <a><img src="img/hotel-1.jpg" width="135" height="90" alt="Курортный спа-отель Amara Resort & Spa с великолепным видом на Красные скалы"></a>
           <h3>Amara Resort & Spa</h3>
           <p>Гостиница</p>
           <p>От 4000 Р.</p>
@@ -96,7 +110,7 @@
           <p>Рейтинг: 8,5</p>
         </li>
         <li>
-          <a><img src="img/hotel-2.jpg" width="135" height="90" alt="Desert Quail Inn"></a>
+          <a><img src="img/hotel-2.jpg" width="135" height="90" alt="Мотель Desert Quail Inn, расположенный в деревне Оук-Крик"></a>
           <h3>Desert Quail Inn</h3>
           <p>Мотель</p>
           <p>От 3000 Р.</p>
@@ -105,7 +119,7 @@
           <p>Рейтинг: 8,9</p>
         </li>
         <li>
-          <a><img src="img/hotel-3.jpg" width="135" height="90" alt="Villas at Poco Diablo"></a>
+          <a><img src="img/hotel-3.jpg" width="135" height="90" alt="Апартаменты Villas at Poco Diablo, расположенные недалеко от Кафедральной горы"></a>
           <h3>Villas at Poco Diablo</h3>
           <p>Апартаменты</p>
           <p>От 2000 Р.</p>
