--- a/catalog.html
+++ b/catalog.html
@@ -4,6 +4,9 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Седона</title>
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap&subset=cyrillic" rel="stylesheet">
+  <link href="css/normalize.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -13,7 +16,7 @@
         <li><a href="#">Информация</a></li>
         <li><a href="#">Фото и видео</a></li>
         <li><a href="#">Карта штата</a></li>
-        <li>Гостиницы</li>
+        <li><a href="#"> Гостиницы</a></li>
       </ul>
     </nav>
     <a href="index.html"><img src="img/logo-sedona.svg" width="138" height="71" alt="Логотип Седоны"></a>
@@ -72,9 +75,8 @@
       </form>
     </section>
     <section>
-      <h2 class="visually-hidden">Результаты поиска</h2>
-      <span>Найдено: 3</span>
-      <p>Сортировка</p>
+      <h2>Сортировка</h2>
+      <p>Найдено:<span>3</span></p>
       <ul>
         <li><a href="">По цене</a></li>
         <li><a href="">По типу</a></li>
@@ -140,7 +142,7 @@
       <h2 class="visually-hidden">Седона в соцсетях</h2>
       <ul>
         <li>
-          <a href="#">
+          <a href="#" aria-label="Твиттер">
             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="17" height="15"
               viewBox="0 0 17 15">
               <path fill="#FFF"
@@ -149,14 +151,14 @@
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="#" aria-label="Фейсбук"></a>
             <svg xmlns="http://www.w3.org/2000/svg" width="12" height="22" viewBox="0 0 12 22">
               <path fill="#FFF" d="M12 4V0H8a4 4 0 0 0-4 4v4H0v4h4v10h4V12h4V8H8V4h4z" />
             </svg>
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="#" aria-label="Ютуб">
             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="20" height="16"
               viewBox="0 0 20 16">
               <path fill="#FFF"
