--- a/index.html
+++ b/index.html
@@ -28,60 +28,61 @@
     <section class="intro">
       <h1 class="visually-hidden">Седона - город в Аризоне</h1>
       <a>
-        <img src="img/intro-welcome.svg" width="458" height="352"
-          alt="Фото каньона с крутыми стенами и сосновыми лесами в городе Седона">
+        <img src="img/intro-welcome.svg" width="458" height="352" alt="Добро пожаловать в Седону">
       </a>
-      <p>Седона — небольшой городок в Аризоне,<br>
-         заслуживающий большего! </p>
-      <p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
+      <div class="box">
+        <p class="title">Седона — небольшой городок в Аризоне,<br>
+           заслуживающий большего! </p>
+        <p class="subtitle">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
+      </div>
     </section>
 
     <section class="features">
       <h2 class="visually-hidden">Преимущества Седоны</h2>
       <ul class="features-list">
-        <li class="feature-item">
-          <h3>Настоящий  городок</h3>
+        <li class="feature-item feature-item-blue">
+          <h3 class="title title-white">Настоящий  городок</h3>
           <span>— №1 —</span>
-           <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+           <p class="subtitle subtitle-white">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
           <img src="img/town.jpg" width="800" height="256" alt="Фото Седоны с красивым видом на горы">
           <ul class="features-list-one">
             <li class="feature-item-one">
-              <!-- <img src="" alt="Жилье"> -->
-              <h4>Жильё</h4>
-              <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+              <div class="pic pic-one"></div>
+              <h4 class="title">Жильё</h4>
+              <p class="subtitle">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
             </li>
             <li class="feature-item-one">
-              <!-- <img src="" alt="Еда"> -->
-              <h4>Еда</h4>
-              <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+              <div class="pic pic-two"></div>
+              <h4 class="title">Еда</h4>
+              <p class="subtitle">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
             </li>
             <li class="feature-item-one">
-              <!-- <img src="" alt="Сувениры"> -->
-              <h4>Сувениры</h4>
-              <p>Не только китайского, но и местного производства!</p>
+              <div class="pic pic-three"></div>
+              <h4 class="title">Сувениры</h4>
+              <p class="subtitle">Не только китайского, но и местного производства!</p>
             </li>
           </ul>
         </li>
-        <li class="feature-item">
+        <li class="feature-item feature-item-blue">
           <img src="img/bridge.jpg" width="800" height="256" alt="Мост Дьявола, созданный самой природой">
-          <h3>Там есть  Мост дьявола  </h3>
+          <h3 class="title title-white">Там есть  Мост дьявола  </h3>
           <span>— №2 —</span>
-          <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+          <p class="subtitle subtitle-white">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
         </li>
-        <li class="feature-item">
-          <h3>Небольшая площадь</h3>
+        <li class="feature-item feature-item-grey">
+          <h3 class="title">Небольшая площадь</h3>
           <span>— №3 —</span>
-          <p>Все достопримечательности  находятся очень близко</p>
+          <p class="subtitle">Все достопримечательности  находятся очень близко</p>
         </li>
-        <li class="feature-item">
-          <h3>Красивая  дорога</h3>
+        <li class="feature-item feature-item-grey">
+          <h3 class="title">Красивая  дорога</h3>
           <span>— №4 —</span>
-          <p>Ехать в Седону из Лас-Вегаса совсем  не скучно!</p>
+          <p class="subtitle">Ехать в Седону из Лас-Вегаса совсем  не скучно!</p>
         </li>
-        <li class="feature-item">
-          <h3>Мало  туристов</h3>
+        <li class="feature-item feature-item-grey">
+          <h3 class="title">Мало  туристов</h3>
           <span>— №5 —</span>
-          <p>Большинство едет в гранд каньон  и толпится там</p>
+          <p class="subtitle">Большинство едет в гранд каньон  и толпится там</p>
         </li>
       </ul>
     </section>
@@ -91,7 +92,7 @@
       <strong>Заинтересовались</strong>
       <p>Укажите предполагаемые даты поездки,<br>
          и мы покажем вам лучшие предложения гостиниц в Cедоне  </p>
-      <button type="button">Поиск гостиницы в Седоне</button>
+      <button class="btn btn-brown" type="button">Поиск гостиницы в Седоне</button>
     </section>
 
     <section class="map">
@@ -102,14 +103,14 @@
 
   <footer class="footer">
     <p class="footer-contacts">
-      <a href="#">#visitSEDONA</a>
+      <a href="#" aria-label="#Посетить Седону">#visitSEDONA</a>
       <p>ТЕЛ: +7(495) 666-01-66</p>
     </p>
     <div class="footer-social">
       <h2 class="visually-hidden">Седона в соцсетях</h2>
       <ul class="social-list">
-        <li class="social-buttom">
-          <a href="#" aria-label="Твиттер">
+        <li class="social-button">
+          <a href="" aria-label="Твиттер">
             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="17" height="15"
               viewBox="0 0 17 15">
               <path fill="#FFF"
@@ -117,15 +118,15 @@
             </svg>
           </a>
         </li>
-        <li class="social-buttom">
-          <a href="#" aria-label="Фейсбук">
+        <li class="social-button">
+          <a href="" aria-label="Фейсбук">
             <svg xmlns="http://www.w3.org/2000/svg" width="12" height="22" viewBox="0 0 12 22">
               <path fill="#FFF" d="M12 4V0H8a4 4 0 0 0-4 4v4H0v4h4v10h4V12h4V8H8V4h4z" />
             </svg>
           </a>
         </li>
-        <li class="social-buttom">
-          <a href="#" aria-label="Ютуб">
+        <li class="social-button">
+          <a href="" aria-label="Ютуб">
             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="20" height="16"
               viewBox="0 0 20 16">
               <path fill="#FFF"
@@ -137,7 +138,7 @@
     </div>
     <p class="footer-copyright">
       Website by
-      <a href="https://htmlacademy.ru">
+      <a href="https://htmlacademy.ru" aria-label="Перейти на сайт HTML Academy">
         <img src="img/logo-htmlacademy.svg" width="104" height="26" alt="Логотип HTML Academy">
         <!-- <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 108.08 36.85">
           <title>logo-htmlacademy-small1</title>
@@ -150,44 +151,44 @@
   <section class="modal-search">
     <h2 class="visually-hidden">Поиск гостиницы</h2>
     <form class="search-form" action="https://echo.htmlacademy.ru" method="POST">
-      <div>
+      <div class="date">
         <label for="datein">Дата заезда:</label>
         <input type="date" name="datein" id="datein">
-        <button type="button">
+        <button class="btn-calend" type="button">
           <span class="visually-hidden">Календарь</span>
         </button>
       </div>
-      <div>
+      <div class="date">
         <label for="dateout">Дата выезда:</label>
         <input type="date" name="dateout" id="dateout">
-        <button class="button">
+        <button class="btn-calend" type="button">
           <span class="visually-hidden">Календарь</span>
         </button>
       </div>
       <p>
         <label for="adults">Взрослые:</label>
         <div>
-          <button type="button">
-            <span class="visually-hidden">Минус</span>
+          <button class="btn-count btn-minus" type="button">
+            <span>-</span>
           </button>
           <input type="number" name="adults" id="adults" min="0" value="2">
-          <button type="button">
-            <span class="visually-hidden">Плюс</span>
+          <button  class="btn-count btn-plus" type="button">
+            <span>+</span>
           </button>
         </div>
         <div>
           <label for="children">Дети:</label>
-          <button type="button">
-            <span class="visually-hidden">Минус</span>
+          <button class=" btn-count btn-minus" type="button">
+            <span>-</span>
           </button>
           <input type="number" name="children" id="children" min="0" value="0">
-          <button type="button">
-            <span class="visually-hidden">Плюс</span>
+          <button class="btn-count btn-plus" type="button">
+            <span>+</span>
           </button>
         </div>
       </p>
       <p>
-        <button type="submit">Найти</button>
+        <button class="btn btn-blue" type="submit">Найти</button>
       </p>
     </form>
   </section>
