стилизация каталог (кроме логотипа академи и календаря)

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <header class="header">
     <nav class="nav">
       <ul class="site-nav">
-        <li><a href="">Информация</a></li>
+        <li><a href="" class="current-link">Информация</a></li>
         <li><a href="#">Фото и видео</a></li>
         <li><a href="#">Карта штата</a></li>
         <li><a href="catalog.html">Гостиницы</a></li>
@@ -33,7 +33,7 @@
       <div class="box">
         <p class="title">Седона — небольшой городок в Аризоне,<br>
            заслуживающий большего! </p>
-        <p class="subtitle">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
+        <p class="text">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
       </div>
     </section>
 
@@ -43,23 +43,23 @@
         <li class="feature-item feature-item-blue">
           <h3 class="title title-white">Настоящий  городок</h3>
           <span>— №1 —</span>
-           <p class="subtitle subtitle-white">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+           <p class="text text-white">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
           <img src="img/town.jpg" width="800" height="256" alt="Фото Седоны с красивым видом на горы">
           <ul class="features-list-one">
             <li class="feature-item-one">
               <div class="pic pic-one"></div>
               <h4 class="title">Жильё</h4>
-              <p class="subtitle">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+              <p class="text">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
             </li>
             <li class="feature-item-one">
               <div class="pic pic-two"></div>
               <h4 class="title">Еда</h4>
-              <p class="subtitle">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+              <p class="text">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
             </li>
             <li class="feature-item-one">
               <div class="pic pic-three"></div>
               <h4 class="title">Сувениры</h4>
-              <p class="subtitle">Не только китайского, но и местного производства!</p>
+              <p class="text">Не только китайского, но и местного производства!</p>
             </li>
           </ul>
         </li>
@@ -67,22 +67,22 @@
           <img src="img/bridge.jpg" width="800" height="256" alt="Мост Дьявола, созданный самой природой">
           <h3 class="title title-white">Там есть  Мост дьявола  </h3>
           <span>— №2 —</span>
-          <p class="subtitle subtitle-white">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+          <p class="text text-white">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
         </li>
         <li class="feature-item feature-item-grey">
           <h3 class="title">Небольшая площадь</h3>
           <span>— №3 —</span>
-          <p class="subtitle">Все достопримечательности  находятся очень близко</p>
+          <p class="text">Все достопримечательности  находятся очень близко</p>
         </li>
         <li class="feature-item feature-item-grey">
           <h3 class="title">Красивая  дорога</h3>
           <span>— №4 —</span>
-          <p class="subtitle">Ехать в Седону из Лас-Вегаса совсем  не скучно!</p>
+          <p class="text">Ехать в Седону из Лас-Вегаса совсем  не скучно!</p>
         </li>
         <li class="feature-item feature-item-grey">
           <h3 class="title">Мало  туристов</h3>
           <span>— №5 —</span>
-          <p class="subtitle">Большинство едет в гранд каньон  и толпится там</p>
+          <p class="text">Большинство едет в гранд каньон  и толпится там</p>
         </li>
       </ul>
     </section>
