--- a/catalog.html
+++ b/catalog.html
@@ -13,10 +13,10 @@
   <header class="header">
     <nav class="nav">
       <ul class="site-nav">
-        <li><a href="#">Информация</a></li>
+        <li><a href="index.html">Информация</a></li>
         <li><a href="#">Фото и видео</a></li>
         <li><a href="#">Карта штата</a></li>
-        <li><a href="#"> Гостиницы</a></li>
+        <li><a href="#" class="current-link"> Гостиницы</a></li>
       </ul>
     </nav>
     <a href="index.html" class="logo">
@@ -24,112 +24,117 @@
     </a>
   </header>
 
-  <main>
+  <main class="catalog-container">
     <h1 class="visually-hidden">Места проживания в городе Седона</h1>
-    <section>
+    <section class="filters">
       <h2 class="visually-hidden">Фильтр мест проживания</h2>
-      <form action="https://echo.htmlacademy.ru" method="GET">
+      <form class="filter" action="https://echo.htmlacademy.ru" method="GET">
         <fieldset>
-          <legend>Инфраструктура:</legend>
-          <ul>
-            <li>
+          <legend class="filter-facilities">Инфраструктура:</legend>
+          <ul class="filter-options">
+            <li class="filter-option">
               <input type="checkbox" name="pool" id="filter-pool" checked>
               <label for="filter-pool">Бассейн</label>
             </li>
-            <li>
+            <li class="filter-option">
               <input type="checkbox" name="parking" id="filter-parking">
               <label for="filter-parking">Парковка</label>
             </li>
-            <li>
+            <li class="filter-option">
               <input type="checkbox" name="wi-fi" id="filter-wi-fi">
               <label for="filter-wi-fi">WI-FI</label>
             </li>
           </ul>
         </fieldset>
-        <fieldset>
+        <fieldset class="filter-type">
           <legend>Тип жилья</legend>
-          <ul>
-            <li>
+          <ul class="filter-options">
+            <li class="filter-option">
               <input type="checkbox" name="hotel" id="filter-hotel" checked>
-              <label for="filter-pool">Гостиница</label>
+              <label for="filter-hotel">Гостиница</label>
             </li>
-            <li>
+            <li class="filter-option">
               <input type="checkbox" name="motel" id="filter-motel" checked>
               <label for="filter-motel">Мотель</label>
             </li>
-            <li>
+            <li class="filter-option">
               <input type="checkbox" name="apartments" id="filter-apartments" checked>
               <label for="filter-apartments">Апартаменты </label>
             </li>
           </ul>
         </fieldset>
-        <fieldset>
+        <fieldset class="filter-price">
           <legend>Стоимость в сутки (р):</legend>
-          <div>
-            <label>от <input type="text" name="price-per-day" id="start-price" value="0"></label>
+          <div class="filter-price-box">
+            <label>от <input  class="price-per-day" type="text" name="price-per-day" id="start-price" value="0"></label>
             <label>до <input type="text" name="price-per-day" id="end-price" value="3000"></label>
           </div>
           <div>
             <!-- здесь будет ползунок-->
           </div>
         </fieldset>
-        <button type="submit">Показать</button>
+        <button type="submit" class="btn-filter">Показать</button>
       </form>
     </section>
-    <section>
+
+    <section class="filter-result">
       <p>Найдено:<span>3</span></p>
       <h2>Сортировка</h2>
-      <ul>
-        <li><a href="">По цене</a></li>
+      <ul class="filter-list">
+        <li><a href="" class="current-result">По цене</a></li>
         <li><a href="">По типу</a></li>
         <li><a href="">По рейтингу</a></li>
       </ul>
-      <ul>
+      <ul class="sorting">
         <li>
-          <a href="" aria-label="Сортировать результат по возрастанию">
+          <a href="" class="sorting-icon sorting-icon-current" aria-label="Сортировать результат по возрастанию">
             <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10">
-              <path fill="#231F20" d="M5.5 0L0 10h11z"/>
+              <path fill="#B2B2B2" d="M5.5 0L0 10h11z"/>
             </svg>
           </a>
         </li>
         <li>
-          <a href="" aria-label="Сортировать результат по убыванию">
+          <a href="" class="sorting-icon" aria-label="Сортировать результат по убыванию">
             <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10">
-              <path fill="#231F20" d="M5.5 10L0 0h11"/>
+              <path fill="#B2B2B2" d="M5.5 10L0 0h11"/>
             </svg>
           </a>
         </li>
       </ul>
     </section>
-    <section>
+
+    <section class="catalog">
       <h2 class="visually-hidden">Список мест проживания</h2>
-      <ul>
-        <li>
-          <a><img src="img/hotel-1.jpg" width="135" height="90" alt="Курортный спа-отель Amara Resort & Spa с великолепным видом на Красные скалы"></a>
-          <h3>Amara Resort & Spa</h3>
-          <p>Гостиница</p>
-          <p>От 4000 Р.</p>
-          <a href="#">Подробнее</a>
-          <a href="#">Забронировать</a>
-          <p>Рейтинг: 8,5</p>
+      <ul class="catalog-list">
+        <li class="catalog-item">
+          <a><img src="img/hotel-1.jpg" class="catalog-img" width="135" height="90" alt="Курортный спа-отель Amara Resort & Spa с великолепным видом на Красные скалы"></a>
+          <h3 class="catalog-title">Amara Resort & Spa</h3>
+          <div class="stars stars-four"></div>
+          <p class="catalog-type">Гостиница</p>
+          <p class="catalog-price">От 4000 Р.</p>
+          <a href="#" class="catalog-more">Подробнее</a>
+          <a href="#" class="catalog-reservation">Забронировать</a>
+          <p class="catalog-rating">Рейтинг: 8,5</p>
         </li>
-        <li>
-          <a><img src="img/hotel-2.jpg" width="135" height="90" alt="Мотель Desert Quail Inn, расположенный в деревне Оук-Крик"></a>
-          <h3>Desert Quail Inn</h3>
-          <p>Мотель</p>
-          <p>От 3000 Р.</p>
-          <a href="#">Подробнее</a>
-          <a href="#">Забронировать</a>
-          <p>Рейтинг: 8,9</p>
+        <li class="catalog-item">
+          <a><img src="img/hotel-2.jpg" class="catalog-img" width="135" height="90" alt="Мотель Desert Quail Inn, расположенный в деревне Оук-Крик"></a>
+          <h3 class="catalog-title">Desert Quail Inn</h3>
+          <div class="stars stars-three"></div>
+          <p class="catalog-type">Мотель</p>
+          <p class="catalog-price">От 3000 Р.</p>
+          <a href="#" class="catalog-more">Подробнее</a>
+          <a href="#" class="catalog-reservation">Забронировать</a>
+          <p class="catalog-rating">Рейтинг: 8,9</p>
         </li>
-        <li>
-          <a><img src="img/hotel-3.jpg" width="135" height="90" alt="Апартаменты Villas at Poco Diablo, расположенные недалеко от Кафедральной горы"></a>
-          <h3>Villas at Poco Diablo</h3>
-          <p>Апартаменты</p>
-          <p>От 2000 Р.</p>
-          <a href="#">Подробнее</a>
-          <a href="#">Забронировать</a>
-          <p>Рейтинг: 9,2</p>
+        <li class="catalog-item">
+          <a><img src="img/hotel-3.jpg" class="catalog-img" width="135" height="90" alt="Апартаменты Villas at Poco Diablo, расположенные недалеко от Кафедральной горы"></a>
+          <h3  class="catalog-title">Villas at Poco Diablo</h3>
+          <div class="stars stars-two"></div>
+          <p class="catalog-type">Апартаменты</p>
+          <p class="catalog-price">От 2000 Р.</p>
+          <a href="#" class="catalog-more">Подробнее</a>
+          <a href="#" class="catalog-reservation">Забронировать</a>
+          <p class="catalog-rating">Рейтинг: 9,2</p>
         </li>
       </ul>
     </section>
